# Quizz

./: .gitignore  CMakeLists.txt  README.md  questions.txt
.txt/: questions.txt
src/: Qcm.cpp  autoquizz.cpp  qcm.h  question.cpp  question.h  quizz.cpp  quizz.h
